add dto for post and comments and other functional changes, response format